name:                bodyweight-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/prikhi/bodyweight-server#readme
license:             GPL-3
license-file:        LICENSE.txt
author:              Pavan Rikhi
maintainer:          pavan.rikhi@gmail.com
copyright:           2016 Pavan Rikhi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Config
                     , Models
                     , Types
                     , Routes
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , aeson
                     , either
                     , monad-logger
                     , mtl
                     , persistent-template
                     , persistent-postgresql
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable bodyweight-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bodyweight-server
                     , warp
                     , persistent-postgresql
  default-language:    Haskell2010

test-suite bodyweight-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bodyweight-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/prikhi/bodyweight-server
